--- a/Spedizioni/Spedizioni/Views/Spedizioni/SpedizioniOggi.cshtml
+++ b/Spedizioni/Spedizioni/Views/Spedizioni/SpedizioniOggi.cshtml
@@ -12,34 +12,34 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.IdSpedizione)
+            Spedizione
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.IdCliente)
+            Cliente
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.codTracciamento)
+            Tracking
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.dataSpedizione)
+            Data spedizione
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.pesoSpedizione)
+            Peso
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.cittaDestinazione)
+            Citta destinazione
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.indirizzoDestinazione)
+            Indirizzo destinazione
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.nominativoDestinatario)
+            Destinatario
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.costoSpedizione)
+            Costo Sped.
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.dataConsegna)
+            Data Consegna
         </th>
         <th></th>
     </tr>
