--- a/Spedizioni/Spedizioni/Content/Site.css
+++ b/Spedizioni/Spedizioni/Content/Site.css
@@ -1,20 +1,40 @@
-﻿/* Set padding to keep content from hitting the edges */
-.body-content {
-    margin-top: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
+﻿
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
 .dl-horizontal dt {
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+
+.bg-img{
+background-image: url('/Content/bg.jpg');
+background-size: cover;
+height: 100vh;
+overflow: hidden;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: 600;
+    color: #333;
+    filter: drop-shadow(2px 2px 1px black)
+}
+
+.track-button {
+    background-color: #D50109;
+    color: white;
+}
+
+.track-button:hover {
+    background-color: darkred;
+    color: white;
 }
