--- a/Spedizioni/Spedizioni/Views/Home/Index.cshtml
+++ b/Spedizioni/Spedizioni/Views/Home/Index.cshtml
@@ -2,32 +2,33 @@
     ViewBag.Title = "Home Page";
 }
 
-<main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
-    </section>
+<div class="bg-img">
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
-    </div>
-</main>
+    <main>
+        <div class="row ms-auto">
+            <div class="col-3"></div>
+            <div class="col-6">
+                <h2 class="mt-5 text-white">Traccia la tua spedizione</h2>
+                @using (Html.BeginForm("Tracking", "Home", FormMethod.Post))
+                {
+                    <div class="form-group mb-3">
+                        <input type="text" placeholder="Codice Fiscale/P.Iva" class="form-control p-3" id="CodiceFiscale" name="CodiceFiscale" required>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group">
+                            <input type="text" placeholder="Tracking Code (12 caratteri)" class="form-control" id="codTracciamento" name="codTracciamento" required>
+                            <div class="input-group-append">
+                                <button type="submit" class="btn track-button border border-white border-3 rounded-0 rounded-end p-3">Traccia</button>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+            <div class="col-3"></div>
+        </div>
+
+
+        <p class="text-danger">@TempData["Message"]</p>
+
+    </main>
+</div>
