--- a/Spedizioni/Spedizioni/Views/Shared/_Layout.cshtml
+++ b/Spedizioni/Spedizioni/Views/Shared/_Layout.cshtml
@@ -3,17 +3,17 @@
 @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-warning">
     <div class="container">
-        @Html.ActionLink("Nome dell'applicazione", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        <img src="~/Content/logo2.png" width="150"/>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Attiva/Disattiva spostamento" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav flex-grow-1">
-                <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                <li>@Html.ActionLink("Inserisci Spedizione", "InserisciSpedizione", "Spedizioni", new { area = "" }, new { @class = "nav-link" })</li>
+                <li>@Html.ActionLink("Traccia", "Index", "Home", new { area = "" }, new { @class = "nav-link text-black" })</li>
+                <li>@Html.ActionLink("Inserisci Spedizione", "InserisciSpedizione", "Spedizioni", new { area = "" }, new { @class = "nav-link text-black ms-2" })</li>
 
                 @if (User.IsInRole("Admin"))
                 {
@@ -30,19 +30,19 @@
                 }
                 else
                 {
-                    <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link text-black" })</li>
                 }
             </ul>
         </div>
     </div>
 </nav>
-<div class="container body-content">
+
     @RenderBody()
     <hr />
     <footer>
         <p>&copy; @DateTime.Now.Year - Applicazione ASP.NET</p>
     </footer>
-</div>
+
 
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
