--- a/Spedizioni/Spedizioni/Views/Home/Index.cshtml
+++ b/Spedizioni/Spedizioni/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="bg-img">
+<div class="bg-img shadow">
 
     <main>
         <div class="row ms-auto">
