--- a/Spedizioni/Spedizioni/Content/Site.css
+++ b/Spedizioni/Spedizioni/Content/Site.css
@@ -1,13 +1,49 @@
 ﻿
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+.custom-menu {
+    margin-top: 50px;
+    margin-left: -240px;
+}
+
+footer {
+    position: fixed;
+    z-index: 50000;
+}
+
+.nav-link:hover {
+    color: #D50109 !important;
+    cursor: pointer;
+    border-bottom: 2px solid #D50109 !important;
+    padding-bottom: 6px;
+}
+
+.nav-link:focus {
+    color: #D50109 !important;
+    border-bottom: 2px solid #D50109 !important;
+}
+
+h3 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #D50109;
+}
+
+.dropdown-menu {
+    width: 340px;
+}
+
+.nav-custom {
+    background: linear-gradient(90deg, #fc0 0%, #fc0 48%, #ffe57f 70%, #fff0b2);
+}
 
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
     color: #333;
-    background-color: #fff;
+    background-color: #FFCC00;
+    overflow: hidden;
 }
 
 .dl-horizontal dt {
@@ -18,7 +54,7 @@ body {
 .bg-img{
 background-image: url('/Content/bg.jpg');
 background-size: cover;
-height: 100vh;
+height: 80vh;
 overflow: hidden;
 }
 
