--- a/Spedizioni/Spedizioni/Views/Home/Login.cshtml
+++ b/Spedizioni/Spedizioni/Views/Home/Login.cshtml
@@ -4,44 +4,43 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
 
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Utenti</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.NomeUtente, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+
+    <div>
+        @Html.ActionLink("Torna alla home", "Index", new {}, new {@class="text-decoration-none text-white"})
+    </div>
+
+    <div class="row">
+        <h2 class="text-center text-white mt-3">Login</h2>
+        <div class="col-3"></div>
+        <div class="col-6">
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group mb-3 mt-3">
+                @Html.LabelFor(model => model.NomeUtente, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.EditorFor(model => model.NomeUtente, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NomeUtente, "", new { @class = "text-danger" })
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="input-group">
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="input-group-append">
+                        <input type="submit" value="Login" class="btn btn-success rounded-0 rounded-end p-2 " />
+                    </div>
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                </div>
             </div>
+            <p class="text-danger mt-3 fs-4">@ViewBag.Message</p>
         </div>
-        <p class="text-danger mt-3 fs-4">@ViewBag.Message</p>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+        <div class="col-3"></div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
