--- a/Spedizioni/Spedizioni/Views/Shared/_Layout.cshtml
+++ b/Spedizioni/Spedizioni/Views/Shared/_Layout.cshtml
@@ -1,11 +1,19 @@
-﻿<title>@ViewBag.Title - Applicazione ASP.NET</title>
-@Styles.Render("~/Content/css")
-@Scripts.Render("~/bundles/modernizr")
+﻿<head>
+    <title>@ViewBag.Title - Applicazione ASP.NET</title>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-warning">
-    <div class="container">
-        <img src="~/Content/logo2.png" width="150"/>
+    <nav class="navbar nav-custom navbar-expand-sm navbar-toggleable-sm">
+        <img src="~/Content/logo2.png" class="p-3" width="150" />
+        <ul class="navbar nav ms-auto me-3">
+            <li class="nav-link text-black "><i class="bi bi-search me-2"></i>Ricerca</li>
+            <li class="nav-link text-black"><i class="bi bi-gear-wide-connected me-2"></i>Italia</li>
+            <li class="nav-link text-black fw-bold">IT</li>
+        </ul>
+    </nav>
+    <nav class="navbar p-3 bg-white shadow navbar-expand-sm navbar-toggleable-sm">
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Attiva/Disattiva spostamento" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -13,37 +21,116 @@
         <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav flex-grow-1">
                 <li>@Html.ActionLink("Traccia", "Index", "Home", new { area = "" }, new { @class = "nav-link text-black" })</li>
-                <li>@Html.ActionLink("Inserisci Spedizione", "InserisciSpedizione", "Spedizioni", new { area = "" }, new { @class = "nav-link text-black ms-2" })</li>
 
-                @if (User.IsInRole("Admin"))
+                <li class="dropdown">
+                    <button class="btn rounded-0 text-black pb-1 nav-link bg-white dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Spedizioni
+                    </button>
+                    <div class="dropdown-menu bg-white bg-opacity-75" aria-labelledby="dropdownMenuButton">
+                        <h3 class="m-3">INIZIA A SPEDIRE</h3>
+
+                        <div class="row">
+
+                            <div class="card col-9 ms-5 me-5 mb-2">
+                                <div class="row d-flex align-items-center">
+                                    <div class="col-2">
+                                        <i class="bi bi-calendar3 text-danger fs-3"></i>
+                                    </div>
+                                    <div class="col-7">
+                                        <p>@Html.ActionLink("Visualizza Spedizioni", "VisualizzaSpedizioni", "Spedizioni", new { area = "" }, new { @class = "nav-link text-black m-0 p-0 ms-2 mt-3" })</p>
+                                    </div>
+                                    <div class="col-3">
+                                        <i class="bi bi-chevron-right"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="card col-9 ms-5 me-5 mb-2">
+                                <div class="row d-flex align-items-center">
+                                    <div class="col-2">
+                                        <i class="bi bi-calendar2-plus text-danger fs-3"></i>
+                                    </div>
+                                    <div class="col-7">
+                                        <p>@Html.ActionLink("Inserisci Spedizione", "InserisciSpedizione", "Spedizioni", new { area = "" }, new { @class = "nav-link text-black m-0 p-0 ms-2 mt-3" })</p>
+                                    </div>
+                                    <div class="col-3">
+                                        <i class="bi bi-chevron-right"></i>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </li>
+
+                @if (User.IsInRole("admin"))
                 {
-                    <li>@Html.ActionLink("Sped. Oggi", "SpedizioniOggi", "Spedizioni", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Sped. In Corso", "SpedizioniInCorso", "Spedizioni", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Sped. Per Citta'", "SpedizioniPerCitta", "Spedizioni", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Spedizioni oggi", "SpedizioniOggi", "Spedizioni", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Spedizioni in corso", "SpedizioniInCorso", "Spedizioni", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Spedizioni per citta", "SpedizioniPerCitta", "Spedizioni", new { area = "" }, new { @class = "nav-link" })</li>
+
                 }
+
             </ul>
 
-            <ul class="navbar-nav ml-auto">
+
+
+
                 @if (Request.IsAuthenticated)
                 {
-                    <li>@Html.ActionLink("Logout", "Logout", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+
+                    <span>@Html.ActionLink("Logout", "Logout", "Home", new { area = "" }, new { @class = "nav-link" })</span>
                 }
                 else
                 {
-                    <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link text-black" })</li>
+                    <div class="navbar-nav ml-auto dropdown">
+                        <button class="btn rounded-0 text-black pb-1 nav-link bg-white dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Login
+                        </button>
+                        <div class="dropdown-menu custom-menu bg-white bg-opacity-75" aria-labelledby="dropdownMenuButton">
+                            <p class="dropdown-item">
+                                @model Spedizioni.Models.Utenti
+                                @using (Html.BeginForm("Login", "Home", FormMethod.Post))
+                                {
+                                    @Html.AntiForgeryToken()
+
+                                    <div class="row">
+                                        <h3 class="text-center m-0 p-0">LOGIN</h3>
+                                        <div class="col-1"></div>
+                                        <div class="col-10">
+                                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                            <div class="form-group mb-3 mt-3">
+                                                @Html.LabelFor(model => model.NomeUtente, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                @Html.EditorFor(model => model.NomeUtente, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.NomeUtente, "", new { @class = "text-danger" })
+                                            </div>
+
+                                            <div class="form-group">
+                                                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                                                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                                            </div>
+                                            <input type="submit" value="Login" class="btn btn-success rounded-0 rounded-end p-2 " />
+                                            <p class="text-danger mt-3 fs-4">@TempData["Message2"]</p>
+                                        </div>
+                                        <div class="col-1"></div>
+                                    </div>
+                                }
+                            </p>
+                        </div>
+                    </div>
                 }
-            </ul>
-        </div>
-    </div>
-</nav>
+                </div>
+            </nav>
 
     @RenderBody()
-    <hr />
     <footer>
         <p>&copy; @DateTime.Now.Year - Applicazione ASP.NET</p>
     </footer>
 
 
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap")
-@RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    @RenderSection("scripts", required: false)
+</body>
