--- a/Spedizioni/Spedizioni/Views/Spedizioni/SpedizioniPerCitta.cshtml
+++ b/Spedizioni/Spedizioni/Views/Spedizioni/SpedizioniPerCitta.cshtml
@@ -4,36 +4,30 @@
     ViewBag.Title = "SpedizioniPerCitta";
 }
 
-<h2>SpedizioniPerCitta</h2>
+<h3 class="text-center mt-4 fs-2">SPEDIZIONI PER CITTA'</h3>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Citta Destinazione
-        </th>
-        <th>
-           Numero Spedizioni
-        </th>
-        <th></th>
-    </tr>
+<div class="container">
+    <table class="table bg-black bg-opacity-75 border-0 shadow rounded-5 text-white bg-gradient">
+        <tr>
+            <th>
+                Citta Destinazione
+            </th>
+            <th>
+                Numero Spedizioni
+            </th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.cittaDestinazione)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IdSpedizione)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.cittaDestinazione)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.IdSpedizione)
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
+</div>
