--- a/Spedizioni/Spedizioni/Views/Home/Login.cshtml
+++ b/Spedizioni/Spedizioni/Views/Home/Login.cshtml
@@ -9,35 +9,29 @@
 {
     @Html.AntiForgeryToken()
 
-    <div>
-        @Html.ActionLink("Torna alla home", "Index", new {}, new {@class="text-decoration-none text-white"})
-    </div>
-
-    <div class="row">
-        <h2 class="text-center text-white mt-3">Login</h2>
+<div class="container">
+    <div class="row bg-white mt-5 pb-5 rounded-3 bg-opacity-75">
+        <h3 class="text-center fs-1 mt-3">LOGIN</h3>
         <div class="col-3"></div>
         <div class="col-6">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group mb-3 mt-3">
-                @Html.LabelFor(model => model.NomeUtente, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.NomeUtente, htmlAttributes: new { @class = "control-label col-md-2 fs-5" })
                 @Html.EditorFor(model => model.NomeUtente, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NomeUtente, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="input-group">
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                    <div class="input-group-append">
-                        <input type="submit" value="Login" class="btn btn-success rounded-0 rounded-end p-2 " />
-                    </div>
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                </div>
+                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2 fs-5" })
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
+            <input type="submit" value="Login" class="btn btn-warning nav-link mt-3 fs-5 fw-bold p-2 w-100 rounded-0" />
             <p class="text-danger mt-3 fs-4">@ViewBag.Message</p>
         </div>
         <div class="col-3"></div>
     </div>
+</div>
 }
 
 
