--- a/Spedizioni/Spedizioni/Views/Home/Tracking.cshtml
+++ b/Spedizioni/Spedizioni/Views/Home/Tracking.cshtml
@@ -1,37 +1,42 @@
 ﻿@model Spedizioni.Models.Spedizioni
 
-@{
-    ViewBag.Title = "Dettagli Spedizione";
-}
-
-<h2>@ViewBag.Title</h2>
-
 <div>
-    <h4>Spedizione</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            TRACKING
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.codTracciamento)
+    <h3 class="text-center mt-4 fs-2">TRACKING SPEDIZIONE - N.@Html.DisplayFor(model => model.codTracciamento)</h3>
+    <dl class="row text-center mt-3 fs-5 bg-white bg-opacity-75 rounded-3">
+        <dd class="col-12">
+
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-12">
             Data Spedizione:
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-12 ">
             @Html.DisplayFor(model => model.dataSpedizione)
         </dd>
-        <dt class="col-sm-2">
+        <dt class="col-12 mt-3">
             Consegna prevista:
         </dt>
-        <dt class="col-sm-2">
+        <dt class="col-12">
             @Html.DisplayFor(model => model.dataConsegna)
         </dt>
+        <dt class="col-12 mt-3">
+            Stato:
+        </dt>
+        <dd class="col-4 offset-4">
+            @switch (Model.IdStatoSpedizione)
+            {
+                case 1:
+                    @:Partita - La Spedizione e' partita dalla sede mittente verso il destinatario
+                    break;
+                case 2:
+                    @:In consegna - La Spedizione e' in transito verso il destinatario. Verra' consegnata nella giornata odierna.
+                    break;
+                case 3:
+                    @:La spedizione e' stata consegnata in data @Model.dataConsegna
+                    break;
+                default:
+                    @:Stato non riconosciuto
+                    break;
+            }
+        </dd>
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
-
